--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
 <body>
 
     <h1>Clase de GIT</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum cupiditate eligendi delectus quidem asperiores, commodi nesciunt perspiciatis officia expedita illo nulla amet incidunt quas voluptatibus facere repellat totam quasi cumque.</p>
     
 </body>
 </html>
