agregue un segundo parrafo

--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,6 @@
 
     <h1>Clase de GIT</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum cupiditate eligendi delectus quidem asperiores, commodi nesciunt perspiciatis officia expedita illo nulla amet incidunt quas voluptatibus facere repellat totam quasi cumque.</p>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores error excepturi praesentium quas libero exercitationem minus, iusto in dolorum nesciunt neque asperiores soluta autem consequuntur distinctio est illo officia doloremque.</p>
 </body>
 </html>
